Modification de la variable de border-radius

--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -124,7 +124,7 @@ $ds44-link-list-decoration       : none !default; // used for menus or link grou
 $ds44-link-list-decoration-hover : none !default; // used for menus or link groups
 
 // Global border-radius
-$ds44-border-radius: 0 !default;
+$ds44-border-radius: 3px !default;
 
 // ---------------
 // Animation zone
