Suite des travaux sur les éléments de la page carrefour : champ de formulaire type texte, bouton standard

--- a/framework/scss/cd44.scss
+++ b/framework/scss/cd44.scss
@@ -62,3 +62,4 @@
 @import "components/templates.scss";
 @import "components/boxes.scss";
 @import "components/list.scss";
+@import "components/forms.scss";
