--- a/framework/scss/components/_list.scss
+++ b/framework/scss/components/_list.scss
@@ -4,6 +4,6 @@
     padding: 0 $ds44-padding-xlarge;
 
     ul {
-        padding: 0 $ds44-padding-xlarge*2;
+        padding: 0 0 0 $ds44-padding-xlarge*2;
     }
 }
