Début des travaux sur boutons

--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -107,6 +107,7 @@ $ds44-light-bg          : $ds44-lightgray !default; // for CD44 light background
 
 $ds44-color-base        : $ds44-dark !default;
 $ds44-background-base   : $ds44-light !default;
+$ds44-background-dark   : $ds44-dark !default;
 
 $ds44-forms-color       : $ds44-gray !default;
 
