--- a/framework/scss/cd44.scss
+++ b/framework/scss/cd44.scss
@@ -63,3 +63,4 @@
 @import "components/boxes.scss";
 @import "components/list.scss";
 @import "components/forms.scss";
+@import "components/buttons.scss";
