--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -315,7 +315,7 @@ figure {
   background-color: $ds44-LA-color;
 }
 .ds44-theme--Agenda {
-  background-color: $ds44-agenda-color;
+  background-color: $ds44-Agenda-color;
 }
 
 /* Flex utils */
