--- a/framework/scss/cd44.scss
+++ b/framework/scss/cd44.scss
@@ -40,15 +40,15 @@
 /* ------ - 3 - KNACSS components             ------- */
 /* -------------------------------------------------- */
 
-@import "./node_modules/knacss/sass/components/buttons";     // CD44 buttons
-@import "./node_modules/knacss/sass/components/skip-links";  // Accessibility tool
+@import "./node_modules/knacss/sass/components/skip-links";   // Accessibility tool
+//@import "./node_modules/knacss/sass/components/buttons";    // KNACSS buttons
 //@import "./node_modules/knacss/sass/components/media";      // media object
 //@import "./node_modules/knacss/sass/components/tables";     // data tables consistency
 //@import "./node_modules/knacss/sass/components/forms";      // forms consistency and styles
 //@import "./node_modules/knacss/sass/components/checkbox";   // checkbox, radio, switch styles
 //@import "./node_modules/knacss/sass/components/tabs";       // tabs styles
 //@import "./node_modules/knacss/sass/components/arrows";     // arrows styles
-//@import "./node_modules/knacss/sass/components/tags";        // tags styles
+//@import "./node_modules/knacss/sass/components/tags";       // tags styles
 //@import "./node_modules/knacss/sass/components/badges";     // badges styles
 //@import "./node_modules/knacss/sass/components/alerts";     // alerts styles
 
