--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -11,8 +11,15 @@
     @include ds44-font-sizes(smallText);
     position: absolute;
     z-index: 10;
-    color: $ds44-color-soft-text;
+    color: $ds44-graytext-color;
     transition: all $ds44-timing-standard ease-in-out;
+}
+
+.ds44-form__label--external {
+    @include ds44-font-sizes(smallText);
+    color: $ds44-color-dark-text;
+    margin: $ds44-small-vmargin 0;
+    display: block;
 }
 
 .ds44-form__inpStd {
