Contextualisation des éléments de charte : création d'un fichier de variables spécifique pour chaque site et adaptation des styles existants pour changer les couleurs automatiquement selon le contexte

--- a/framework/scss/cd44.scss
+++ b/framework/scss/cd44.scss
@@ -14,6 +14,7 @@
 
 // CD44 config
 @import "_config/variables";
+@import "_config/contextual-variables-LA.scss";  // This file must be adapted for specifiq website /!\
 @import "_config/mixins";
 
 /* -------------------------------*/
