Ajout de la hiérarchie des titres, ajout d'un reset sur les boutons, appel de la feuille de variables contextuelles et création du fichier contextuel dédié à l'Agenda

--- a/framework/scss/cd44.scss
+++ b/framework/scss/cd44.scss
@@ -14,7 +14,8 @@
 
 // CD44 config
 @import "_config/variables";
-@import "_config/contextual-variables-LA.scss";  // This file must be adapted for specifiq website /!\
+@import "_config/contextual-variables-LA.scss";        // Choose the right contextual file - and only one /!\
+//@import "_config/contextual-variables-Agenda.scss";  // Switch contextual files according to actual website  /!\
 @import "_config/mixins";
 
 /* -------------------------------*/
