--- a/framework/scss/components/_buttons.scss
+++ b/framework/scss/components/_buttons.scss
@@ -1,14 +1,33 @@
 /*
 * CD44 Design System - Buttons
 */
+  
+
+[type="button"],
+button {
+    display: inline-block;
+    cursor: pointer;
+    user-select: none;
+    transition: all ease-in-out $ds44-timing-faster;
+    vertical-align: middle;
+    text-decoration: none;
+    border: none;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: 1;
+
+    &:focus {
+        -webkit-tap-highlight-color: transparent;
+    }
+}
 
 .ds44-btnStd {
     @include ds44-font-sizes(bodySize);
+    padding: $ds44-padding-box;
     border-radius: $ds44-border-radius;
     border: 1px solid $ds44-dark;
     font-weight: bold;
     background-color: $ds44-light-color;
-    transition: all ease-in-out $ds44-timing-faster;
     
     &:focus,
     &:hover,
@@ -17,10 +36,6 @@
         transform: scale(1.01); 
         border: 1px solid $ds44-darkgray;
     }
-}
-
-.ds44-btnStd--medium {
-    padding: $ds44-padding-box;
 }
 
 .ds44-btnStd--large {
