--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -86,11 +86,8 @@ h2, .h2-like {
   padding: 0 1.5rem;
   display: inline-block;
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+40,99e6d1+40,99e6d1+65,ffffff+65 */
-  background: rgb(255,255,255); /* Old browsers */
-  background: -moz-linear-gradient(top,  rgba(255,255,255,1) 40%, rgba(153,230,209,1) 40%, rgba(153,230,209,1) 65%, rgba(255,255,255,1) 65%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 40%,rgba(153,230,209,1) 40%,rgba(153,230,209,1) 65%,rgba(255,255,255,1) 65%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom,  rgba(255,255,255,1) 40%,rgba(153,230,209,1) 40%,rgba(153,230,209,1) 65%,rgba(255,255,255,1) 65%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+  background: $ds44-contextual-color; /* Old browsers */
+  background: linear-gradient(to bottom,  rgba(255,255,255,1) 40%,$ds44-contextual-color 40%,$ds44-contextual-color 65%,rgba(255,255,255,1) 65%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
 
 h3, .h3-like {
