--- a/framework/scss/cd44.scss
+++ b/framework/scss/cd44.scss
@@ -28,7 +28,7 @@
 @import "./node_modules/knacss/sass/_library/utilities";            // width and spacer helpers
 @import "./node_modules/knacss/sass/_library/grillade-grid";        // Grid System 
 //@import "_library/responsive";                                    // Responsive Web Design helpers
-//@import "./node_modules/knacss/sass/_library/layout";             // alignment, modules, positionning
+@import "./node_modules/knacss/sass/_library/layout";               // alignment, modules, positionning
 
 // KNACSS modified Libraries
 
