--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -84,10 +84,11 @@ h2, .h2-like {
   }
   font-weight: $weight-bold;
   padding: 0 1.5rem;
+  line-height: 1.2;
   display: inline-block;
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+40,99e6d1+40,99e6d1+65,ffffff+65 */
   background: $ds44-contextual-color; /* Old browsers */
-  background: linear-gradient(to bottom,  rgba(255,255,255,1) 40%,$ds44-contextual-color 40%,$ds44-contextual-color 65%,rgba(255,255,255,1) 65%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 55%,$ds44-contextual-color 55%);
 }
 
 h3, .h3-like {
