Refactor (corrections d'accessibilité) Onglets du doc Témésis  : Encadrés, Tuiles, Menus (+ dépendances)

--- a/framework/scss/components/_buttons.scss
+++ b/framework/scss/components/_buttons.scss
@@ -3,7 +3,7 @@
 */
   
 
-button {
+button, a.ds44-btnStd {
     display: inline-block;
     cursor: pointer;
     user-select: none;
@@ -20,7 +20,7 @@ button {
     }
 }
 
-.ds44-btnStd {
+.ds44-btnStd, a.ds44-btnStd {
     font-size: .875em; // 14px
     padding: $ds44-padding-box;
     border-radius: $ds44-border-radius;
