--- a/framework/scss/components/_menu.scss
+++ b/framework/scss/components/_menu.scss
@@ -59,6 +59,7 @@
 
 .ds44-menuBackLink {
     font: bold 1.75em/1 $ds44-font-family-headings; // 28px
+    display: inline-block;
 }
 
 .ds44-menuLink, .ds44-menuLink--subLvl {
