--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -60,6 +60,11 @@ body {
 .ds44-alternate-container {
   background-color: $ds44-light-bg;
 }
+@media (max-width: $ds44-medium) {
+  .ds44-container-relmob {
+    position: relative;
+  }
+}
 
 /* Links */
 a {
