--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -44,6 +44,14 @@
 .ds44--2xl-padding-l {
     padding-left: $ds44-padding-xlarge*2;
 }
+.ds44--antiStickyPad {
+  padding-bottom: 10rem!important;
+}
+@media (max-width: $ds44-medium) {
+  .ds44--antiStickyPad {
+    padding-bottom: 0!important;
+  }
+}
 
 // margins
 .ds44-mb3 {
