Fix [accessibilité] Revue d'accessibilité sur tous les composants et ajout des JS : - Tooltip - Label/input - Menu

--- a/framework/scss/components/_card.scss
+++ b/framework/scss/components/_card.scss
@@ -7,6 +7,7 @@
     transition-property: box-shadow;
     transition-timing-function: ease;
     margin-bottom: $ds44-medium-vmargin;
+    cursor: pointer;
 
     &:focus,
     &:hover,
