Fix [Header + variantes] Ajout des variantes dans le header

--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -289,7 +289,7 @@ li > p:first-child {
   }
 }
 
-ul:not(.ds44-list) {
+ul:not(.ds44-list):not(.ds44-collapser) {
 
   padding-left: $ds44-padding-xlarge;
 
@@ -309,6 +309,7 @@ ul:not(.ds44-list) {
     }
   }
 }
+
 
 /* Max values */
 img,
