Fix [accessibilité sprint 1] Seconde passe sur les retours accessibilité

--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -168,6 +168,11 @@ h6, .h6-like {
 
   a {
     text-decoration: none;
+
+    &:hover, &:focus, &:active {
+      text-decoration: underline;
+    }
+
   }
   
 }
