Feature [Page article/actu] - Ajout des nouveaux composants pour la page actu/article - Composant push fluide - Légende d'image - Ajout de la page article/actu assemblée - Ajout du template centré

--- a/framework/scss/cd44.scss
+++ b/framework/scss/cd44.scss
@@ -74,3 +74,5 @@
 @import "components/onglets.scss";
 @import "components/overlays.scss";
 @import "components/share.scss";
+@import "components/images.scss";
+@import "components/wysiwyg.scss";
