--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -139,8 +139,8 @@
 .ds44-flex-mauto {
   margin: auto!important;
 }
-.ds44-halfWidth {
-  width: 50%;
+.ds44-frw {
+  flex-direction: row-reverse;
 }
 
 /* Element properties */
@@ -419,10 +419,6 @@
   === */
 
 @media (max-width: $ds44-small) {
-
-  .ds44-halfWidth {
-    width: 100%;
-  }
 
   .ds44-bgCircle {
     background-size: 380px;
