Composants tuiles et images sous différents ratios

--- a/framework/scss/components/_wysiwyg.scss
+++ b/framework/scss/components/_wysiwyg.scss
@@ -3,10 +3,6 @@
 /* ---------------------------------------- */
 
 
-h2 + p {
-    margin-top: $ds44-medium-vmargin;
-}
-
-.ds44-contenuArticle h2 + p {
-    margin-top: $ds44-components-vmargin;
+.ds44-contenuArticle h2 {
+    margin-bottom: $ds44-components-vmargin;
 }
