Fix header -> attributs non souhaités

--- a/docs/_includes/components/header.html
+++ b/docs/_includes/components/header.html
@@ -1,6 +1,6 @@
 <header role="banner" id="topPage" class="ds44-container-fluid ds44-header">
 
-    <div class="ds44-blocBandeau" style="width: 1477.4px;" aria-hidden="true">
+    <div class="ds44-blocBandeau">
         <ul class="ds44-list ds44-skiplinks">
             <li><a href="#content" class="ds44-skiplinks--link" oldtabindex="null" tabindex="-1" aria-hidden="true">Aller au contenu</a></li>
             <li><a href="#menu" class="ds44-skiplinks--link" oldtabindex="null" tabindex="-1" aria-hidden="true">Aller au menu</a></li>
