--- a/framework/scss/components/_carrousel.scss
+++ b/framework/scss/components/_carrousel.scss
@@ -97,7 +97,7 @@ div .swiper-slide {
     margin-right: 0px;
 }
 
-@media screen and (max-width: $ds44-medium) {
+@media screen and (max-width: $ds44-medium -.0625) {
 
   .ds44-carousel-swiper li {
       width: auto;
