--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -115,6 +115,10 @@ $ds44-font-sizes: (
   quotes: (
     mobile  : 2.375em,  // 38px
     desktop : 2.375em   // 38px
+  ),
+  errMsg: (
+    mobile  : .875em,   // 14px
+    desktop : .875em    // 14px
   )
 ) !default;
 
