--- a/framework/scss/components/_card.scss
+++ b/framework/scss/components/_card.scss
@@ -10,7 +10,7 @@
     cursor: pointer;
 
     &.ds44-card--contact {
-        border-bottom: 0.1875rem solid $ds44-contextual-color;
+        border-bottom: 0.2rem solid $ds44-contextual-color;
         background: $ds44-lightgray;
 
         .ds44-card__section {
@@ -35,7 +35,7 @@
         }
 
         .ds44-cardTitle {
-            padding-top: $ds44-padding-large !important;
+            padding-top: $ds44-padding-large;
         }
     }
 
