Evol [select en erreur] - Ajout du design en erreur

--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -260,6 +260,10 @@ input[type=radio],
 
 .ds44-select__shape {
     cursor: pointer;
+    
+    &.ds44-boxError {
+        border-color: $ds44-error;
+    }
 }
 
 .ds44-selectLabel {
