Fix [RS-511 bug] - Ajout d'une accolade fermante oubliée

--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -344,6 +344,7 @@ input[type=radio],
         &:active {
             cursor: pointer;
             text-decoration: none;
+        }
     }
       
     .ds44-form__container {
