RS-501 - Autocomplete input

--- a/docs/_includes/forms/inc-input-autocomp.html
+++ b/docs/_includes/forms/inc-input-autocomp.html
@@ -7,7 +7,7 @@
         </div>
         <div class="ds44-autocomp-list">
             <ul class="ds44-list" role="listbox"></ul>
-            <p><a href="#" class="ds44-lightLink"></a></p>
+            <p class="ds44-lightLink"></p>
         </div>
     </div>
 </div>
