--- a/docs/_includes/forms/inc-input-autocomp.html
+++ b/docs/_includes/forms/inc-input-autocomp.html
@@ -1,9 +1,9 @@
 <div class="ds44-form__container">
     <label for="{{ include.id }}" class="ds44-formLabel"><span class="ds44-labelTypePlaceholderLarge ds44-moveLabel">{{ include.label }}{{ include.requiredStar }}</span> <input type="text" id="{{ include.id }}" class="ds44-inpLarge" {{ include.required }} aria-label="Tag" role="combobox" aria-autocomplete="list" autocomplete="off" data-url="/autocomplete.json" {{include.options}}/></label>
     <div class="ds44-autocomp-container hidden">
-        <div class="ds44-flex-container">
-            <button class="ds44-btnStd ds44-bgGray ds44-btnStd--plat ds44-fg1" type="button">Bouton plat</button>
-            <button class="ds44-btnStd ds44-bgGray ds44-btnStd--plat ds44-fg1 ds44-border-left--light" type="button"><span class="ds44-btnInnerText">Bouton plat + icône</span><i class="icon icon-position" aria-hidden="true"></i></button>
+        <div class="ds44-autocomp-buttons ds44-flex-container">
+            <button class="ds44-btnStd ds44-bgGray ds44-btnStd--plat ds44-fg1" type="button" data-value="option1" data-text="Premier bouton">Bouton plat</button>
+            <button class="ds44-btnStd ds44-bgGray ds44-btnStd--plat ds44-fg1 ds44-border-left--light" type="button"  data-value="option2" data-text="Deuxième bouton"><span class="ds44-btnInnerText">Bouton plat + icône</span><i class="icon icon-position" aria-hidden="true"></i></button>
         </div>
         <div class="ds44-autocomp-list">
             <ul class="ds44-list" role="listbox"></ul>
