--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -649,6 +649,10 @@
     column-count: 2;
   }
 
+  .ds44-m-t-xl-noUnderline {
+    text-decoration: none;
+  }
+
 }
 
 @media (min-width: $ds44-large) {
