Evol [inputs] - Ajout d'un bouton en forme de croix pour effacer les saisies en cours dans les champs de formulaires - Refacto des boutons

--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -123,6 +123,10 @@ $ds44-font-sizes: (
   formListElem: (
     mobile  : 1.125em,  // 18px
     desktop : 1.125em   // 18px
+  ),
+  input: (
+    mobile  : 1em,      // 16px
+    desktop : 1em       // 16px
   )
 ) !default;
 
