--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -43,7 +43,7 @@
     .ds44-labelTypePlaceholder,
     .ds44-labelTypePlaceholderLarge {
         position: absolute;
-        top: $ds44-padding-medium;
+        top: 1.1rem;
         left: $ds44-padding-box;
         transition: all $ds44-timing-standard ease-in-out;
         color: $ds44-gray;
@@ -87,9 +87,9 @@
 }
 
 .ds44-inpStd {
-    @include ds44-font-sizes(button);
+    @include ds44-font-sizes(input);
     border-radius: $ds44-border-radius;
-    padding: $ds44-padding-medium $ds44-padding-box;
+    padding: $ds44-padding-medium $ds44-padding-ico $ds44-padding-medium $ds44-padding-box;
     border: 1px solid $ds44-gray;
     min-width: 100%;
     vertical-align: middle;
@@ -120,6 +120,15 @@
 
 .ds44-format {
     color: $ds44-color-soft-text;
+}
+
+/* Bouton de reset de champ */
+
+.ds44-reset {
+    position: absolute;
+    right: 0;
+    top: calc(50% - 13px);
+    display: none;
 }
 
 /**
