--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -125,8 +125,8 @@ $ds44-font-sizes: (
     desktop : 1.125em   // 18px
   ),
   input: (
-    mobile  : 1em,      // 16px
-    desktop : 1em       // 16px
+    mobile  : 1.6rem,   // 16px
+    desktop : 1.6rem    // 16px
   )
 ) !default;
 
