Fix [couleur des textes] - Surcharge de la couleur des éléments dans un contexte de fond noir

--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -88,6 +88,7 @@
 
 .ds44-inpStd {
     @include ds44-font-sizes(button);
+    color: $ds44-color-dark-text;
     border-radius: $ds44-border-radius;
     padding: $ds44-padding-medium $ds44-padding-box;
     border: 1px solid $ds44-gray;
@@ -102,6 +103,7 @@
 
 .ds44-inpLarge {
     @include ds44-font-sizes(largeButton);
+    color: $ds44-color-dark-text;
     border-radius: $ds44-border-radius;
     padding: $ds44-padding-large;
     border: 1px solid $ds44-gray;
@@ -142,6 +144,7 @@
         border-radius: 2px;
         height: 1.6rem;
         width: 1.6rem;
+        background-color: #fff;
         transition: background-size $ds44-timing-faster ease-out;
         background-position: center;
         background-size: 0rem;
@@ -164,7 +167,7 @@ input[type=checkbox],
     }
 
     &:checked + .ds44-boxLabel::before {
-        background: url(../../../assets/images/cd44-check-black.png) no-repeat center;
+        background: #FFF url(../../../assets/images/cd44-check-black.png) no-repeat center;
         background-size: 1rem;
     }
 
@@ -322,7 +325,7 @@ input[type=radio],
     label {
         @include ds44-font-sizes(formListElem);
         display: block;
-        color: $ds44-dark;
+        color: $ds44-color-dark-text;
 
         &:hover,
         &:focus,
@@ -342,7 +345,7 @@ input[type=radio],
 
     label {
         display: block;
-        color: $ds44-dark;
+        color: $ds44-color-dark-text;
         @include ds44-font-sizes(bodySize);
 
         &:hover,
@@ -368,6 +371,7 @@ input[type=radio],
 
     label {
         @include ds44-font-sizes(formListElem);
+        color: $ds44-color-dark-text;
         min-width: calc(100% - 4.5rem);
         cursor: pointer;
     }
@@ -423,6 +427,7 @@ input[type=radio],
     position: absolute;
     width: 100%;
     z-index: 10;
+    color: $ds44-color-dark-text;
 }
 
 .ds44-autocomp-list {
