--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -518,6 +518,7 @@ input[type=radio],
     width: calc(100% - 40px);
     display: block;
     white-space: nowrap;
+    color: $ds44-color-soft-text;
 }
 
 
