--- a/docs/_includes/menu/navigation-pdcv.html
+++ b/docs/_includes/menu/navigation-pdcv.html
@@ -16,7 +16,7 @@
                 <p class="h4-like" aria-describedby="commune-name">Consultez l’actualité ou trouvez des contacts près de chez vous :</p>  
                 <form>
                     <div class="ds44-form__container">
-                        <label for="name" class="ds44-formLabel"><span class="ds44-labelTypePlaceholderLarge ds44-moveLabel">Votre commune</span> <input type="text" id="commune-name" class="ds44-inpLarge" required aria-required="true" /></label>
+                        <label for="name" class="ds44-formLabel txtleft"><span class="ds44-labelTypePlaceholderLarge ds44-moveLabel">Votre commune</span> <input type="text" id="commune-name" class="ds44-inpLarge" required aria-required="true" /></label>
                     </div>
                     <button type="button" class="ds44-btnStd ds44-btn--invert" aria-label="Valider votre recherche près de chez vous"><span class="ds44-btnInnerText">Valider</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></button>
                 </form>
