--- a/docs/_includes/forms/inc-textarea.html
+++ b/docs/_includes/forms/inc-textarea.html
@@ -1,7 +1,7 @@
 {% include forms/_variables.html %}
 
 {% capture mainContent %}
-<textarea rows="9" cols="1" id="{{ id }}" class="{{ mainClass }}" {{ requiredOptions }} {{ title }} {{ ariaOptions }}></textarea>
+<textarea rows="9" cols="1" id="{{ id }}" class="{{ mainClass }}" {{ requiredAttributes }} {{ title }} {{ attributes }}></textarea>
 {% endcapture %}
 
 {% capture labelContent %}
