--- a/docs/_includes/forms/input-std-infoComp.html
+++ b/docs/_includes/forms/input-std-infoComp.html
@@ -1,7 +1,7 @@
 {% include forms/_variables.html %}
 
 {% capture mainContent %}
-<input type="text" id="{{ id }}" class="{{ mainClass }}" {{ requiredOptions }} {{ title }} {{ ariaOptions }} /><span class="ds44-labelTypeInfoComp">{{ include.infoComp }}</span>{% include forms/parts/reset.html %}
+<input type="text" id="{{ id }}" class="{{ mainClass }}" {{ requiredAttributes }} {{ title }} {{ attributes }} /><span class="ds44-labelTypeInfoComp">{{ include.infoComp }}</span>{% include forms/parts/reset.html %}
 {% endcapture %}
 
 {% capture labelContent %}
