--- a/docs/_includes/forms/parts/label.html
+++ b/docs/_includes/forms/parts/label.html
@@ -1,1 +1,1 @@
-<label for="{{ id }}" class="ds44-formLabel"><span class="{{ placeholderClass }}">{{ label }}{{ requiredStar }}</span>{{ include.content }}</label>
+<label for="{{ id }}" class="{{ labelClass }}"><span class="{{ placeholderClass }}">{{ label }}{{ requiredStar }}</span>{{ include.content }}</label>
