Auto stash before rebase of "origin/RS-675"

--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -330,7 +330,7 @@ input[type=radio],
            }
       }
 
-      p.ds44-heading {
+      .ds44-heading {
         margin: 0.5em 1em;
       }
 
@@ -709,7 +709,7 @@ input[type=radio],
 
          &.ds44-theme {
 
-             p.ds44-heading {
+             .ds44-heading {
                margin: 0 0 1em 0;
              }
 
