--- a/docs/_includes/menu/navigation-pdcv.html
+++ b/docs/_includes/menu/navigation-pdcv.html
@@ -21,7 +21,7 @@
             </div>
 
             <div class="col-2-small-1 txtcenter ds44-h100">
-                <div class="ds44-separator  ds44-flex-valign-center ds44-flex-valign-center ds44-flex-align-center ds44-flex-container">
+                <div class="ds44-separator  ds44-flex-valign-center ds44-flex-align-center ds44-flex-container">
                     <p class="ds44-txtBulle">Ou</p>
                 </div>
             </div>
