Feat [RS-815] - Page magazine - Modif des statuts de plusieurs pages validées - Inclusion du push trois colonnes

--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -94,26 +94,29 @@
   padding-left    : $ds44-padding-xlarge;
 }
 .ds44--2xl-padding {
-  padding    : $ds44-padding-xlarge*2; // 6rem
+  padding    : $ds44-padding-xlarge*2;      // 6rem
 }
 .ds44--2xl-padding-l {
   padding-left    : $ds44-padding-xlarge*2; // 6rem
 }
 .ds44--2xl-padding-t {
-  padding-top    : $ds44-padding-xlarge*2; // 6rem
+  padding-top    : $ds44-padding-xlarge*2;  // 6rem
 }
 .ds44--2xl-padding-b {
-  padding-bottom : $ds44-padding-xlarge*2; // 6rem
+  padding-bottom : $ds44-padding-xlarge*2;  // 6rem
 }
 .ds44--xxl-padding-tb {
-  padding-top    : $ds44-padding-xxlarge; // 5rem
-  padding-bottom : $ds44-padding-xxlarge; // 5rem
+  padding-top    : $ds44-padding-xxlarge;   // 5rem
+  padding-bottom : $ds44-padding-xxlarge;   // 5rem
+}
+.ds44--xxl-padding-t {
+  padding-top : $ds44-padding-xxlarge;      // 5rem
 }
 .ds44--xxl-padding-b {
-  padding-bottom : $ds44-padding-xxlarge; // 5rem
+  padding-bottom : $ds44-padding-xxlarge;   // 5rem
 }
 .ds44--3xl-padding {
-  padding    : $ds44-padding-xlarge*3; // 9rem
+  padding    : $ds44-padding-xlarge*3;      // 9rem
 }
 .ds44--3xl-padding-l {
   padding-left    : $ds44-padding-xlarge*3; // 9rem
@@ -131,6 +134,10 @@
   margin-left: $ds44-margin-base;
   margin-right: $ds44-margin-base;
 }
+.ds44-mtb1 {
+  margin-top: $ds44-margin-base;            // 1rem
+  margin-bottom: $ds44-margin-base;         // 1rem
+}
 .ds44-mb-std {
   margin-bottom: $ds44-medium-vmargin;      // 1.5rem
 }
@@ -142,7 +149,7 @@
   margin-bottom: $ds44-large-vmargin;       // 2rem
 }
 .ds44-mt2 {
-  margin-top: $ds44-large-vmargin;          // 2rem
+  margin-top: $ds44-large-vmargin!important;// 2rem
 }
 .ds44-m-std {
   margin: $ds44-medium-vmargin;             // 3rem
@@ -151,7 +158,7 @@
   margin-bottom: $ds44-components-vmargin;  // 3rem
 }
 .ds44-mt3 {
-  margin-top: $ds44-components-vmargin;     // 3rem
+  margin-top: $ds44-components-vmargin!important;  // 3rem
 }
 .ds44-mtb3 {
   margin-bottom: $ds44-components-vmargin;  // 3rem
@@ -167,11 +174,35 @@
   margin-left: $ds44-components-vmargin;    // 3rem
   margin-right: $ds44-components-vmargin;   // 3rem
 }
+.ds44-mlr4 {
+  margin-left: 4rem!important;              // 4rem
+  margin-right: 4rem!important;             // 4rem
+}
 .ds44-mt4 {
   margin-top: 4rem!important;               // 4rem
 }
+.ds44-mtb4 {
+  margin-top: 4rem!important;               // 4rem
+  margin-bottom: 4rem!important;            // 4rem
+}
 .ds44-m5 {
   margin: $ds44-container-vmargin;          // 5rem
+}
+.ds44-mt5 {
+  margin-top: $ds44-container-vmargin;      // 5rem
+}
+.ds44-mb5 {
+  margin-bottom: $ds44-container-vmargin;   // 5rem
+}
+.ds44-mr5 {
+  margin-right: $ds44-container-vmargin;    // 5rem
+}
+.ds44-ml5 {
+  margin-left: $ds44-container-vmargin;     // 5rem
+}
+.ds44-mlr5 {
+  margin-right: $ds44-container-vmargin;    // 5rem
+  margin-left: $ds44-container-vmargin;     // 5rem
 }
 .ds44-m5c {
   margin: $ds44-container-vmargin auto;     // 5rem
