Fix [RS-815] - Version tablette du magazine

--- a/docs/_includes/boxes/inc-box-pushX3.html
+++ b/docs/_includes/boxes/inc-box-pushX3.html
@@ -1,4 +1,4 @@
-<div class="grid-12-small-1">
+<div class="grid-12-small-1 grid-12-medium-1">
   <div class="col-4 colPush">
     <section class="ds44-box ds44-theme ds44-wave-white">
       <div class="ds44-flex-container ds44-box--push">
