--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -79,7 +79,7 @@ h2, .h2-like {
   display: inline;
 
   // Any element after the title gains margin top
-  & + * {
+  &:not(.h3-like) + * {
     margin-top: $ds44-components-vmargin;
   }
 
