Auto stash before rebase of "origin/RS-835"

--- a/docs/_includes/menu/inc-menu-rechercher.html
+++ b/docs/_includes/menu/inc-menu-rechercher.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="col-5-small-1">
-                <h3 class="h4-like">Accédez aux contenus les plus recherchés :</h3>
+                <h3 class="h4-like" id="titreContenus">Accédez aux contenus les plus recherchés :</h3>
                 <ul class="ds44-list">
                     <li><a href="#" class="ds44-arrowLink">Inscription à l’animation sportive<i class="icon icon-arrow-right" aria-hidden="true"></i></a></li>
                     <li><a href="#" class="ds44-arrowLink">Recherche d’assistante maternelle<i class="icon icon-arrow-right" aria-hidden="true"></i></a></li>
