--- a/docs/_includes/modal/inc-qui-contacter.html
+++ b/docs/_includes/modal/inc-qui-contacter.html
@@ -15,7 +15,7 @@
 					<p class="ds44-docListElem ds44-mt-std"><i class="icon icon-mail ds44-docListIco" aria-hidden="true"></i><a href="mailto:contact@loire-atlantique.fr" aria-label="Contacter par mail : contact@loire-atlantique.fr">contact@loire-atlantique.fr</a></p>
 				</div>
 				<div class="col-6 ds44-modal-column">
-					<h2 class="h4-like">Besoin d’aide ?</h2>
+					<h2 class="h4-like" id="titre2">Besoin d’aide ?</h2>
 					<p class="ds44-docListElem ds44-mt-std"><i class="icon icon-time ds44-docListIco" aria-hidden="true"></i>du lundi au vendredi, de 12h30 à 16h30</p>
 					<p class="ds44-docListElem ds44-mt-std"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i>02 40 99 12 82</p>
 					<p class="ds44-docListElem ds44-mt-std"><i class="icon icon-mail ds44-docListIco" aria-hidden="true"></i><a href="mailto:support-aidepermis@loire-atlantique.fr" aria-label="Contacter par mail : support-aidepermis@loire-atlantique.fr">support-aidepermis@loire-atlantique.fr</a></p>
