--- a/docs/_includes/modal/inc-cookies.html
+++ b/docs/_includes/modal/inc-cookies.html
@@ -1,7 +1,7 @@
 <section class="ds44-modal-container" id="overlay-cookies" aria-hidden="true" role="dialog" aria-labelledby="titre-modale-cookies">
 	<div class="ds44-modal-box">
 		<button class="ds44-btnOverlay--modale ds44-btnOverlay--closeOverlay" type="button" title="Fermer la boîte de dialogue et accepter l'utilisation des cookies" data-js="ds44-modal-action-close">
-				<i class="icon icon-cross icon--xlarge" aria-hidden="true"></i><span class="ds44-btnInnerText--bottom">Fermer la boîte de dialogue et accepter l'utilisation des cookies</span>
+				<i class="icon icon-cross icon--xlarge" aria-hidden="true"></i><span class="ds44-btnInnerText--bottom">Fermer</span>
 		</button>
 		<div class="ds44-modal-gab txtcenter">
 			<img src="../../assets/images/pictos/picto-cookies.svg" alt="" class="center">
